# HackSprint

./: README.md
backend/: CMakeLists.txt  deribit_trader.cpp
backend/include/: deribit_trader.hpp  trading_agent.hpp
backend/src/: deribit_trader.cpp  main.cpp  trading_agent.cpp
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/.next/: app-build-manifest.json  trace
frontend/.next/server/: app-paths-manifest.json  server-reference-manifest.json  webpack-runtime.js
frontend/.next/server/app/: page.js  page_client-reference-manifest.js
frontend/.next/server/vendor-chunks/: @babel.js  @floating-ui.js  @radix-ui.js  @swc.js  @tanstack.js  aria-hidden.js  class-variance-authority.js  clsx.js  d3-array.js  d3-color.js  d3-format.js  d3-interpolate.js  d3-path.js  d3-scale.js  d3-shape.js  d3-time-format.js  d3-time.js  decimal.js-light.js  eventemitter3.js  fast-equals.js  get-nonce.js  internmap.js  lodash.js  lucide-react.js  next.js  object-assign.js  prop-types.js  react-is.js  react-remove-scroll-bar.js  react-remove-scroll.js  react-smooth.js  react-style-singleton.js  react-transition-group.js  recharts-scale.js  recharts.js  tailwind-merge.js  tiny-invariant.js  tslib.js  use-callback-ref.js  use-sidecar.js  (+1 more)
frontend/.next/static/chunks/: _error.js  app-pages-internals.js  webpack.js
frontend/.next/static/webpack/: 1e02fe66cda5550c.webpack.hot-update.json  c4fe8961115b5d13.webpack.hot-update.json  c8959b1fa712381f.webpack.hot-update.json  d4bd86a798321d01.webpack.hot-update.json  e973675121390f02.webpack.hot-update.json  f7ca5caf618210ff.webpack.hot-update.json  webpack.0019ccf0c2fde6d4.hot-update.js  webpack.056afd00124a2f9e.hot-update.js  webpack.06749c63d7d2566c.hot-update.js  webpack.0c5f81e763a058a3.hot-update.js  (+98 more)
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/ai-agent/: page.tsx
frontend/app/analytics/: page.tsx
frontend/app/risk/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/trading/: page.tsx
frontend/components/: layout.tsx
frontend/components/ui/: slider.tsx
(+148 files in other folders)
